--- a/products/wise-charlie.html
+++ b/products/wise-charlie.html
@@ -28,7 +28,14 @@
         <h1 class="h2">Wise Charlie</h1>
         <br>
         <div class="body-content">
-            <p>Work in Progress...</p>
+            <p><strong>Story: </strong>Charlie Munger has been a huge source of inspiration to me since I was a teenager. He is known for clear thinking and profound values among many things. He is Warren Buffett's partner-in-crime at Berkshire Hathaway. The concept of mental models was coined by Munger. Mental models are big ideas from big disciplines which can help one think constructively in a multidiscilinary approach. These mental models help you ask the right questions by thinking critically. I wanted to create a central repository of these mental models which would explain them in a fun way.</p>
+            <p><strong>Product: </strong>Wise Charlie is a collection of 100 mental model cards packaged in a beautiful and compact box. It is a pocket tool for your mind. Each model has fun artwork with a short defintion followd by a funny example. I wanted the product to reflect humor because Charlie Munger in real life is hilarious.</p>
+            <img src="../assets/wise_charlie.jpeg">
+            <img src="../assets/wise_charlie1.JPG">
+            <img src="../assets/wise_charlie2.jpg">
+            <p class="tiny-text">Example of a mental model.</p>
+            <p><strong>Results: </strong>The project has been a challenge in ways that I didn't expect when I first started. Manufacturing a physical product is very tough especially when you respect design and quality for your product. Project in alive and in progress. You can visit the project at <a href="https://wwww.wisecharlie.com">www.wisecharlie.com</a>.</p>
+            <p><strong>Instagram: </strong><a href="https://wwww.instagram.com/heywisecharlie">@heywisecharlie</strong></a></p>
         </div>
     </div>
     <div class="footer-container">
