remove footer from product pages

--- a/products/humble-pen.html
+++ b/products/humble-pen.html
@@ -24,7 +24,7 @@
     </div>
     <br>
     <br>
-    <div class="body-container">
+    <div class="body-container body-container-override ">
         <h1 class="h2">Humble Pen</h1>
         <br>
         <div class="body-content">
@@ -37,14 +37,8 @@
             <p><strong>Results: </strong>Project was shut down due to lack of focus, bad hiring and lack of fundamental economics in the supply chain of humble pen. The product supported fair wages for artisans in the factory who produced our pens, artwork cost and philanthropy cost for education. This was naturally unsustainable in the long term. Nonetheless, project was a success in its own right, Humble Pen supported education for almost 1000 kids.</p>
             <p><strong>Instagram: </strong><a href="wwww.instagram.com/humblepen"><strong>@humblepen</strong></a></p>
         </div>
-    </div>
-    <div class="footer-container">
-        <ul>
-            <li><a href="https://twitter.com/mihirchronicles"><i class="fa fa-twitter fa-2x"></i></a></li>
-            <li><a href="https://www.linkedin.com/in/mihirchronicles"><i class="fa fa-linkedin fa-2x"></i></a></li>
-            <li><a href="mailto:mihirptl89@gmail.com"><i class="fa fa-envelope-o fa-2x"></i></a></li>
-        </ul>
-        <p class="tiny-text"><a href="./disclaimer">Disclaimer</a></p>
+        <br>
+        <br>
     </div>
     <!-- Google Analytics -->
     <script>
