--- a/products/wise-charlie.html
+++ b/products/wise-charlie.html
@@ -24,7 +24,7 @@
     </div>
     <br>
     <br>
-    <div class="body-container">
+    <div class="body-container body-container-override ">
         <h1 class="h2">Wise Charlie</h1>
         <br>
         <div class="body-content">
@@ -37,14 +37,8 @@
             <p><strong>Results: </strong>The project has been a challenge in ways that I didn't expect when I first started. Manufacturing a physical product is very tough especially when you respect design and quality for your product. Project in alive and in progress. You can visit the project at <a href="https://wwww.wisecharlie.com">www.wisecharlie.com</a>.</p>
             <p><strong>Instagram: </strong><a href="https://wwww.instagram.com/heywisecharlie">@heywisecharlie</strong></a></p>
         </div>
-    </div>
-    <div class="footer-container">
-        <ul>
-            <li><a href="https://twitter.com/mihirchronicles"><i class="fa fa-twitter fa-2x"></i></a></li>
-            <li><a href="https://www.linkedin.com/in/mihirchronicles"><i class="fa fa-linkedin fa-2x"></i></a></li>
-            <li><a href="mailto:mihirptl89@gmail.com"><i class="fa fa-envelope-o fa-2x"></i></a></li>
-        </ul>
-        <p class="tiny-text"><a href="./disclaimer">Disclaimer</a></p>
+        <br>
+        <br>
     </div>
     <!-- Google Analytics -->
     <script>
