--- a/products/humble-pen.html
+++ b/products/humble-pen.html
@@ -35,7 +35,7 @@
             <p><strong>Product: </strong>Humble Pen was a hand-made designer pen made out of bamboo packaged in a beautiful box. Each pen also came with artist inspired postcards. For every purchase, the product supported educational needs for children in Haiti, India and Cambodia.</p>
             <img src="../assets/humble_pen.jpg">
             <p><strong>Results: </strong>Project was shut down due to lack of focus, bad hiring and lack of fundamental economics in the supply chain of humble pen. The product supported fair wages for artisans in the factory who produced our pens, artwork cost and philanthropy cost for education. This was naturally unsustainable in the long term. Nonetheless, project was a success in its own right, Humble Pen supported education for almost 1000 kids.</p>
-            <p><strong>Instagram: </strong><a href="wwww.instagram.com/humblepen"><strong>@humblepen</strong></a></p>
+            <p><strong>Instagram: </strong><a href="https://wwww.instagram.com/humblepen"><strong>@humblepen</strong></a></p>
         </div>
         <br>
         <br>
