--- a/products/wise-charlie.html
+++ b/products/wise-charlie.html
@@ -34,8 +34,8 @@
             <img src="../assets/wise_charlie1.JPG">
             <img src="../assets/wise_charlie2.jpg">
             <p class="tiny-text">Example of a mental model.</p>
-            <p><strong>Results: </strong>The project has been a challenge in ways that I didn't expect when I first started. Manufacturing a physical product is very tough especially when you respect design and quality for your product. Project in alive and in progress. You can visit the project at <a href="https://wwww.wisecharlie.com">www.wisecharlie.com</a>.</p>
-            <p><strong>Instagram: </strong><a href="https://wwww.instagram.com/heywisecharlie">@heywisecharlie</strong></a></p>
+            <p><strong>Results: </strong>The project has been a challenge in ways that I didn't expect when I first started. Manufacturing a physical product is very tough especially when you respect design and quality for your product. Project in alive and in progress. You can visit the project at <a href="https://wisecharlie.com/">www.wisecharlie.com</a>.</p>
+            <p><strong>Instagram: </strong><a href="https://www.instagram.com/heywisecharlie/">@heywisecharlie</strong></a></p>
         </div>
         <br>
         <br>
