--- a/pages/product.html
+++ b/pages/product.html
@@ -31,8 +31,8 @@
             <p>I have been building and launching products for several years now. I find lots of joy in building creative products. Below you will find my past and present product stories.</p>
             <br>
             <ol>
-            	<li><a href="/products/wise-charlie.html">Wise Charlie</a></li><br>
-                <li><a href="/products/humble-pen.html">Humble Pen</a></li><br>
+            	<li><a href="/products/wise-charlie.html"><strong>Wise Charlie</strong></a></li><br>
+                <li><a href="/products/humble-pen.html"><strong>Humble Pen</strong></a></li><br>
             </ol>
         </div>
     </div>
