--- a/products/wise-charlie.html
+++ b/products/wise-charlie.html
@@ -31,11 +31,14 @@
             <p><strong>Story: </strong>Charlie Munger has been a huge source of inspiration to me since I was a teenager. He is Warren Buffett's business partner at Berkshire Hathaway and famously known as one of the broadest thinkers. The concept of mental models was coined by Munger. Mental models are big ideas from big disciplines which can help one think constructively in a multi-disciplinary approach. These mental models can help anyone ask the right questions by thinking critically. I wanted to create a central repository of these mental models which would explain them in a fun way.</p>
             <p><strong>Product: </strong>Wise Charlie is a collection of 100 mental model cards packaged in a beautiful and compact box. It is a pocket tool for a mind. Each model has fun artwork with a short defintion followed by a funny example. I wanted the product to reflect humor because Charlie Munger in real life is hilarious.</p>
             <img src="../assets/wise_charlie.jpeg">
+            <p class="tiny-text">Product packaging.</p>
             <img src="../assets/wise_charlie1.JPG">
+            <p class="tiny-text">Artwork for mental model cards.</p>
             <img src="../assets/wise_charlie2.jpg">
             <p class="tiny-text">Example of a mental model.</p>
-            <p><strong>Results: </strong>The project has been a challenge in many ways that I didn't anticipated when I first started. Manufacturing a physical product is very hard especially when you are not willing to sacrifice design and quality for your product. Project in alive and in progress. You can visit the project at <a href="https://wisecharlie.com/">www.wisecharlie.com</a>.</p>
-            <p><strong>Instagram: </strong><a href="https://www.instagram.com/heywisecharlie/">@heywisecharlie</strong></a></p>
+            <p><strong>Results: </strong>The project has been a challenge in many ways that I did not anticipate. Manufacturing a physical product is still very hard especially when you are not willing to sacrifice design and quality for your product. After successful prototyping and production, Wise Charlie is healthy and work in progress.</p>
+            <p><strong>Instagram: </strong><a href="https://www.instagram.com/heywisecharlie/"><strong>@heywisecharlie</strong></a></p>
+            <p><strong>Website: </strong><a href="https://wisecharlie.com/"><strong>www.wisecharlie.com</strong></a></p>
         </div>
         <br>
         <br>
