--- a/pages/bookshelf.html
+++ b/pages/bookshelf.html
@@ -28,32 +28,32 @@
         <h1 class="body-title">The Bookshelf</h1>
         <br>
         <div class="body-content">
-            <p>Reading is the best way to experience life! It is fun and adventurous! We all know money compounds, but so does knowledge. I am an avid reader so I would like to share with you what I read and learn. I invite you to join me on this adventorous journey of reading. Below is a fairly complete catalog of the physical books I own. I always enjoy reading other people's lists and browsing their bookshelves.</p>
+            <p>Reading is the best way to experience life! It is fun and adventurous! We all know money compounds, but so does knowledge. I take my multi-disciplinary approach to select books and opt-in for long forms of reading. Being an avid reader, I would like to share with you what I read and learn. I invite you to join me on this adventorous journey of reading. Below is a fairly complete catalog of the physical books I own. I always enjoy reading other people's lists and browsing their bookshelves.</p>
             <p><a href="mailto:mihirptl89@gmail.com">Drop me a note</a> if you have a book recommendation.</p>
             <br>
             <ol>
-                <li><a href="">Poor Charlie's Almanack: The Wit and Wisdom of Charles T. Munger</a></li><br>
-                <li><a href="">Sapiens: A Brief History of Humankind</a></li><br>
-                <li><a href="">The Martian</a></li><br>
-                <li><a href="">Man's Search for Meaning</a></li><br>
-                <li><a href="">The Intelligent Investor</a></li><br>
-                <li><a href="">Elon Musk: Tesla, SpaceX, and the Quest for a Fantastic Future</a></li><br>
-                <li><a href="">The Hard Thing About Hard Things: Building a Business When There Are No Easy Answers</a></li><br>
-                <li><a href="">Becoming Steve Jobs: The Evolution of a Reckless Upstart into a Visionary Leader</a></li><br>
-                <li><a href="">Zero to One: Notes on Startups, or How to Build the Future</a></li><br>
-                <li><a href="">Misbehaving: The Making of Behavioral Economics</a></li><br>
-                <li><a href="">Steve Jobs</a></li><br>
-                <li><a href="">Dark Matter</a></li><br>
-                <li><a href="">The Everything Store: Jeff Bezos and the Age of Amazon</a></li><br>
-                <li><a href="">The Subtle Art of Not Giving a F*ck: A Counterintuitive Approach to Living a Good Life</a></li><br>
-                <li><a href="">The Snowball: Warren Buffett and the Business of Life</a></li><br>
-                <li><a href="">How Google Works</a></li><br>
-                <li><a href="">The Power of Habit: Why We Do What We Do in Life and Business</a></li><br>
-                <li><a href="">The Great Gatsby</a></li><br>
-                <li><a href="">The Creator's Code The Six Essential Skills of Extraordinary Entrepreneurs</a></li><br>
-                <li><a href="">The $100 Startup: Reinvent the Way You Make a Living, Do What You Love, and Create a New Future</a></li><br>
-                <li><a href="">Being Logical: A Guide to Good Thinking</a></li><br>
-                <li><a href="">Grit</a></li><br>
+                <li><a href=""><strong>Poor Charlie's Almanack: The Wit and Wisdom of Charles T. Munger</strong></a></li><br>
+                <li><a href=""><strong>Sapiens: A Brief History of Humankind</strong></a></li><br>
+                <li><a href=""><strong>The Martian</strong></a></li><br>
+                <li><a href=""><strong>Man's Search for Meaning</strong></a></li><br>
+                <li><a href=""><strong>The Intelligent Investor</strong></a></li><br>
+                <li><a href=""><strong>Elon Musk: Tesla, SpaceX, and the Quest for a Fantastic Future</strong></a></li><br>
+                <li><a href=""><strong>The Hard Thing About Hard Things: Building a Business When There Are No Easy Answers</strong></a></li><br>
+                <li><a href=""><strong>Becoming Steve Jobs: The Evolution of a Reckless Upstart into a Visionary Leader</strong></a></li><br>
+                <li><a href=""><strong>Zero to One: Notes on Startups, or How to Build the Future</strong></a></li><br>
+                <li><a href=""><strong>Misbehaving: The Making of Behavioral Economics</strong></a></li><br>
+                <li><a href=""><strong>Steve Jobs</strong></a></li><br>
+                <li><a href=""><strong>Dark Matter</strong></a></li><br>
+                <li><a href=""><strong>The Everything Store: Jeff Bezos and the Age of Amazon</strong></a></li><br>
+                <li><a href=""><strong>The Subtle Art of Not Giving a F*ck: A Counterintuitive Approach to Living a Good Life</strong></a></li><br>
+                <li><a href=""><strong>The Snowball: Warren Buffett and the Business of Life</strong></a></li><br>
+                <li><a href=""><strong>How Google Works</strong></a></li><br>
+                <li><a href=""><strong>The Power of Habit: Why We Do What We Do in Life and Business</strong></a></li><br>
+                <li><a href=""><strong>The Hitchhiker's Guide to the Galaxy</strong></a></li><br>
+                <li><a href=""><strong>The Creator's Code The Six Essential Skills of Extraordinary Entrepreneurs</strong></a></li><br>
+                <li><a href=""><strong>The $100 Startup: Reinvent the Way You Make a Living, Do What You Love, and Create a New Future</strong></a></li><br>
+                <li><a href=""><strong>Being Logical: A Guide to Good Thinking</strong></a></li><br>
+                <li><a href=""><strong>Grit</strong></a></li><br>
             </ol>
         </div>
     </div>
