--- a/pages/writing.html
+++ b/pages/writing.html
@@ -29,7 +29,7 @@
         <br>
         <div class="body-content">
             <p>I utilize writing as a tool to communicate my thoughts more clearly. I'll document my thoughts mainly on <i>investment valuations</i> and <i>product engineering</i> topics. Occasionally, I will share on philosophy and historical events.</p>
-            <p><i>Logical persepective</i> is called upon us everyday while making critical decisions. However, the noise around us makes it very difficult to separate out fact from opinion. Liberal arts and humanity is not given any importance in higher in our modern society. We are molded by our way of our thinking. Our culture is the product of our thinking and everyday. The decay of soceity starts accelerating when there is a decay of logical thiking. Writing is such tool I use to think critically and present my thoughts more clearly based on factual context.</p>
+            <p><i>Logical persepective</i> is called upon us everyday while making critical decisions. However, the noise around us makes it very difficult to separate out fact from opinion. Liberal arts and humanity is not given the same importance as math and science in higher education today. We are molded by our way of thinking. The decay of soceity starts accelerating when there is a decay of logical thiking. Writing is such tool I utilize to think critically and present my thoughts more clearly based on factual context.</p>
             <br>
             <ol>
                 <li><a href="/posts/investment-valuations.html"><strong>Investment Valuations</strong></a></li><br>
