--- a/pages/writing.html
+++ b/pages/writing.html
@@ -28,8 +28,8 @@
         <h1 class="body-title">Writing</h1>
         <br>
         <div class="body-content">
-            <p>I utilize writing as a tool to communicate my thoughts more clearly. I'll document my thoughts mainly on <i>investment valuations</i> and <i>product engineering</i> topics. Occasionally, I will share on philosophy and historical events.</p>
-            <p><i>Logical persepective</i> is called upon us everyday while making critical decisions. However, the noise around us makes it very difficult to separate out fact from opinion. Liberal arts and humanity is not given the same importance as math and science in higher education today. We are molded by our way of thinking. The decay of soceity starts accelerating when there is a decay of logical thiking. Writing is such tool I utilize to think critically and present my thoughts more clearly based on factual context.</p>
+            <p>I utilize writing as a tool to communicate my thoughts more clearly. I'll document my thoughts mainly on <i>investment valuations</i> and <i>product engineering</i> topics in a long form essays. Occasionally, I will write on philosophy and historical events.</p>
+            <p><i>Logical persepective</i> is called upon us everyday while making critical decisions. However, the noise around us makes it very difficult to separate out fact from opinion. Liberal arts and humanity is not given the same importance as math and science in higher education today. It should be a reminder for us all that we are molded by our way of thinking. In that case, you can bet the decay of soceity will start accelerating if there is a broader decay of logical thiking. Expressing clear thoughts with a logical perspective is my goal here.</p>
             <br>
             <ol>
                 <li><a href="/posts/investment-valuations.html"><strong>Investment Valuations</strong></a></li><br>
