--- a/pages/bookshelf.html
+++ b/pages/bookshelf.html
@@ -54,6 +54,66 @@
                 <li><a href=""><strong>The $100 Startup: Reinvent the Way You Make a Living, Do What You Love, and Create a New Future</strong></a></li><br>
                 <li><a href=""><strong>Being Logical: A Guide to Good Thinking</strong></a></li><br>
                 <li><a href=""><strong>Grit</strong></a></li><br>
+                <li><a href=""><strong>The Big Short</strong></a></li><br>
+                <li><a href=""><strong>Flash Boys</strong></a></li><br>
+                <li><a href=""><strong>Built to Last</strong></a></li><br>
+                <li><a href=""><strong>Good to Great</strong></a></li><br>
+                <li><a href=""><strong>Phil Knight Shoe Dog</strong></a></li><br>
+                <li><a href=""><strong>Failure is not an Option</strong></a></li><br>
+                <li><a href=""><strong>Predictable Revenue</strong></a></li><br>
+                <li><a href=""><strong>The Phoenix Project</strong></a></li><br>
+                <li><a href=""><strong>Common Stocks and Uncommon Profits</strong></a></li><br>
+                <li><a href=""><strong>Surely You're Joking, Mr. Feynman</strong></a></li><br>
+                <li><a href=""><strong>Meditations</strong></a></li><br>
+                <li><a href=""><strong>The Innovators</strong></a></li><br>
+                <li><a href=""><strong>Benjamin Franklin</strong></a></li><br>
+                <li><a href=""><strong>Morgan</strong></a></li><br>
+                <li><a href=""><strong>Andrew Carnegie</strong></a></li><br>
+                <li><a href=""><strong>King Capital</strong></a></li><br>
+                <li><a href=""><strong>George W Bush</strong></a></li><br>
+                <li><a href=""><strong>African American Religious History</strong></a></li><br>
+                <li><a href=""><strong>How to Win Friends and INfluence People</strong></a></li><br>
+                <li><a href=""><strong>Reminiscences of a Stock Operator</strong></a></li><br>
+                <li><a href=""><strong>Moneyball</strong></a></li><br>
+                <li><a href=""><strong>The Essays of Warren Buffett</strong></a></li><br>
+                <li><a href=""><strong>Blink</strong></a></li><br>
+                <li><a href=""><strong>Outliers</strong></a></li><br>
+                <li><a href=""><strong>Tipping Point</strong></a></li><br>
+                <li><a href=""><strong>Influence</strong></a></li><br>
+                <li><a href=""><strong>Things a Little Bird Told Me</strong></a></li><br>
+                <li><a href=""><strong>Thinking Fast and Slow</strong></a></li><br>
+                <li><a href=""><strong>Solar Revolution</strong></a></li><br>
+                <li><a href=""><strong>Big Ideas For Curious Minds</strong></a></li><br>
+                <li><a href=""><strong>Then We Came to the End</strong></a></li><br>
+                <li><a href=""><strong>Dreams from My Father</strong></a></li><br>
+                <li><a href=""><strong>The Boy Who Harnessed the Wind</strong></a></li><br>
+                <li><a href=""><strong>The Alchemist</strong></a></li><br>
+                <li><a href=""><strong>Into The Wild</strong></a></li><br>
+                <li><a href=""><strong>Eminem The Way I Am</strong></a></li><br>
+                <li><a href=""><strong>The Dream</strong></a></li><br>
+                <li><a href=""><strong>His Father's Son</strong></a></li><br>
+                <li><a href=""><strong>The Weekend That Changed The Wall Street</strong></a></li><br>
+                <li><a href=""><strong>An Autobiogrpahy MK Gandhi</strong></a></li><br>
+                <li><a href=""><strong>Extreme Ownership</strong></a></li><br>
+                <li><a href=""><strong>Rework</strong></a></li><br>
+                <li><a href=""><strong>The Wealth Of Nations Adam Smith</strong></a></li><br>
+                <li><a href=""><strong>Knuth's Books on Programming</strong></a></li><br>
+                <li><a href=""><strong>Data Structures and Algorithms Made Easy</strong></a></li><br>
+                <li><a href=""><strong>Design Patterns</strong></a></li><br>
+                <li><a href=""><strong>Introduction To Algorithms</strong></a></li><br>
+                <li><a href=""><strong>Head First Design Patterns</strong></a></li><br>
+                <li><a href=""><strong>Eloquent Javascript</strong></a></li><br>
+                <li><a href=""><strong>Harry Potter Full Volume</strong></a></li><br>
+                <li><a href=""><strong>The New Buffettology</strong></a></li><br>
+                <li><a href=""><strong>The Pixar Touch</strong></a></li><br>
+                <li><a href=""><strong>What It Means To Be A Cub</strong></a></li><br>
+                <li><a href=""><strong>The Gene</strong></a></li><br>
+                <li><a href=""><strong>Security Analysis</strong></a></li><br>
+                <li><a href=""><strong>Drowning in Oil</strong></a></li><br>
+                <li><a href=""><strong>Jugaad</strong></a></li><br>
+                <li><a href=""><strong>Start Something That Matters</strong></a></li><br>
+                <li><a href=""><strong>How Successful People Think</strong></a></li><br>
+                <li><a href=""><strong>The Little Book of Mathematical Principles, Theories, & Things</strong></a></li><br>
             </ol>
         </div>
     </div>
