--- a/pages/bookshelf.html
+++ b/pages/bookshelf.html
@@ -114,6 +114,7 @@
                 <li><a href=""><strong>Start Something That Matters</strong></a></li><br>
                 <li><a href=""><strong>How Successful People Think</strong></a></li><br>
                 <li><a href=""><strong>The Little Book of Mathematical Principles, Theories, & Things</strong></a></li><br>
+                <li><a href=""><strong>The New Oxford Guide To Writing</strong></a></li><br>
             </ol>
         </div>
     </div>
