--- a/pages/bookshelf.html
+++ b/pages/bookshelf.html
@@ -115,6 +115,7 @@
                 <li><a href=""><strong>How Successful People Think</strong></a></li><br>
                 <li><a href=""><strong>The Little Book of Mathematical Principles, Theories, & Things</strong></a></li><br>
                 <li><a href=""><strong>The New Oxford Guide To Writing</strong></a></li><br>
+                <li><a href=""><strong>The Daily Stoic</strong></a></li><br>
             </ol>
         </div>
     </div>
