--- a/pages/bookshelf.html
+++ b/pages/bookshelf.html
@@ -28,7 +28,7 @@
         <h1 class="body-title">The Bookshelf</h1>
         <br>
         <div class="body-content">
-            <p>Reading is the best way to experience life! It is fun and adventurous! We all know money compounds, but so does knowledge. I take multi-disciplinary approach to select books and opt-in for long forms of reading. Being an avid reader, I would like to share with you what I read and learn. I invite you to join me on this adventorous journey of reading. Below is a fairly complete catalog of the physical books I own. I always enjoy reading other people's lists and browsing their bookshelves.</p>
+            <p>Reading is the best way to experience life! It is fun and adventurous! We all know money compounds, but so does knowledge. I take multi-disciplinary approach to select books and opt-in for long forms of reading. Being an avid reader, I would like to share with you what I read and learn. I invite you to join me on this adventurous journey of reading. Below is a fairly complete catalog of the physical books I own. I always enjoy reading other people's lists and browsing their bookshelves.</p>
             <p><a href="mailto:mihirptl89@gmail.com">Drop me a note</a> if you have a book recommendation.</p>
             <br>
             <ol>
