--- a/pages/bookshelf.html
+++ b/pages/bookshelf.html
@@ -116,6 +116,12 @@
                 <li><a href=""><strong>The Little Book of Mathematical Principles, Theories, & Things</strong></a></li><br>
                 <li><a href=""><strong>The New Oxford Guide To Writing</strong></a></li><br>
                 <li><a href=""><strong>The Daily Stoic</strong></a></li><br>
+                <li><a href=""><strong>The Last Lecture</strong></a></li><br>
+                <li><a href=""><strong>Life of Pi</strong></a></li><br>
+                <li><a href=""><strong>A Little History of the World</strong></a></li><br>
+                <li><a href=""><strong>In the Plex</strong></a></li><br>
+                <li><a href=""><strong>The Black Swan</strong></a></li><br>
+                <li><a href=""><strong>The Healing of America: A Global Quest for Better, Cheaper, and Fairer Health Care</strong></a></li><br>
             </ol>
         </div>
     </div>
