--- a/pages/writing.html
+++ b/pages/writing.html
@@ -28,11 +28,10 @@
         <h1 class="body-title">Writing</h1>
         <br>
         <div class="body-content">
-            <p>I utilize writing as a tool to communicate my thoughts more clearly. I'll document my thoughts mainly on <i>investment philosophies</i> and <i>product engineering</i> topics in long form essays. Occasionally, I will also write on philosophy and historical events.</p>
-            <p><i>Logical perspective</i> is called upon us everyday while making critical decisions. However, the noise around us makes it very difficult to separate out fact from opinion. Liberal arts and humanity is not given the same importance as math and science in higher education today. It should be a reminder for us all that we are molded by our way of thinking. In that case, you can bet the decay of society will start accelerating if there is a broader decay of logical thinking. Expressing clear thoughts with a logical perspective is my goal here.</p>
+            <p><i>Upwind</i> (chasing after hard topics) and <i>Primitives</i> (sticking with basics) is the main theme in my writing. I utilize writing as a tool to communicate my thoughts more clearly and to document on topics as I am learning.</p>
             <br>
             <ol>
-                <li><a href="/posts/post-1.html"><strong>Post 1 TBD</strong></a></li><br>
+                <li><a href="/posts/logical-thinking.html"><strong>Logical Thinking</strong></a></li><br>
             </ol>
         </div>
     </div>
