--- a/pages/writing.html
+++ b/pages/writing.html
@@ -28,7 +28,7 @@
         <h1 class="body-title">Writing</h1>
         <br>
         <div class="body-content">
-            <p><i>Upwind</i> (chasing after hard topics) and <i>Primitives</i> (sticking with basics) is the main theme in my writing. I utilize writing as a tool to communicate my thoughts more clearly and to document on topics as I am learning.</p>
+            <p><i>Upwind</i> (chasing after hard topics) and <i>Primitives</i> (sticking with basics) is the main theme in my writing. I utilize writing as a tool to communicate my thoughts more clearly and to document on topics I am learning.</p>
             <br>
             <ol>
                 <li><a href="/posts/logical-thinking.html"><strong>Logical Thinking</strong></a></li><br>
