--- a/pages/bookshelf.html
+++ b/pages/bookshelf.html
@@ -28,7 +28,7 @@
         <h1 class="body-title">The Bookshelf</h1>
         <br>
         <div class="body-content">
-            <p>Reading is a fun way to experience life! We all know money compounds, but so does knowledge. I use multi-disciplinary approach to select wide array of books. Being an avid reader, I will share with you what I have read and learn. This bookshelf represents a complete catalog of physical books I own. I always enjoy reading other people's lists and browsing their bookshelves.</p>
+            <p>Reading is a fun way to experience life! We all know money compounds, but so does knowledge. I use multi-disciplinary approach to select wide array of books. Being an avid reader, I will share with you what I have read and learn. This bookshelf represents a complete catalog of books I own. I always enjoy reading other people's lists and browsing their bookshelves.</p>
             <p><a href="mailto:mihirptl89@gmail.com"><strong>Drop me a note</strong></a> if you have a book recommendation.</p>
             <br>
             <ol>
@@ -79,7 +79,7 @@
                 <li><a href=""><strong>Blink</strong></a></li><br>
                 <li><a href=""><strong>Outliers</strong></a></li><br>
                 <li><a href=""><strong>Tipping Point</strong></a></li><br>
-                <li><a href=""><strong>Influence</strong></a></li><br>
+                <li><a href=""><strong>Influence: The Psychology of Persuasion</strong></a></li><br>
                 <li><a href=""><strong>Things a Little Bird Told Me</strong></a></li><br>
                 <li><a href=""><strong>Thinking Fast and Slow</strong></a></li><br>
                 <li><a href=""><strong>Solar Revolution</strong></a></li><br>
@@ -122,6 +122,11 @@
                 <li><a href=""><strong>In the Plex</strong></a></li><br>
                 <li><a href=""><strong>The Black Swan</strong></a></li><br>
                 <li><a href=""><strong>The Healing of America: A Global Quest for Better, Cheaper, and Fairer Health Care</strong></a></li><br>
+                <li><a href=""><strong>Homo Deus: A Brief History of Tomorrow </strong></a></li><br>
+                <li><a href=""><strong>Thrive: The Third Metric to Redefining Success and Creating a Life of Well-Being, Wisdom, and Wonder</strong></a></li><br>
+                <li><a href=""><strong></strong>How Will You Measure Your Life?</a></li><br>
+                <li><a href=""><strong></strong>Elon Musk: Tesla, SpaceX, and the Quest for a Fantastic Future</a></li><br>
+                <li><a href=""><strong>Predictable Revenue: Turn Your Business Into a Sales Machine</strong></a></li><br>
             </ol>
         </div>
     </div>
