--- a/pages/bookshelf.html
+++ b/pages/bookshelf.html
@@ -124,8 +124,8 @@
                 <li><a href=""><strong>The Healing of America: A Global Quest for Better, Cheaper, and Fairer Health Care</strong></a></li><br>
                 <li><a href=""><strong>Homo Deus: A Brief History of Tomorrow </strong></a></li><br>
                 <li><a href=""><strong>Thrive: The Third Metric to Redefining Success and Creating a Life of Well-Being, Wisdom, and Wonder</strong></a></li><br>
-                <li><a href=""><strong></strong>How Will You Measure Your Life?</a></li><br>
-                <li><a href=""><strong></strong>Elon Musk: Tesla, SpaceX, and the Quest for a Fantastic Future</a></li><br>
+                <li><a href=""><strong>How Will You Measure Your Life?</strong></a></li><br>
+                <li><a href=""><strong>Elon Musk: Tesla, SpaceX, and the Quest for a Fantastic Future</strong></a></li><br>
                 <li><a href=""><strong>Predictable Revenue: Turn Your Business Into a Sales Machine</strong></a></li><br>
             </ol>
         </div>
