--- a/pages/bookshelf.html
+++ b/pages/bookshelf.html
@@ -28,7 +28,7 @@
         <h1 class="body-title">The Bookshelf</h1>
         <br>
         <div class="body-content">
-            <p>Reading is a fun way to experience life! We all know money compounds, but so does knowledge. I use multi-disciplinary approach to select wide array of books. Being an avid reader, I will share with you what I have read and learn. This bookshelf represents a complete catalog of books I own. I always enjoy reading other people's lists and browsing their bookshelves.</p>
+            <p>Reading is a fun way to experience life and go on an adventure! We all know money compounds, but so does knowledge. I use multi-disciplinary approach to select wide array of books to go on an adventure. This bookshelf represents a complete catalog of books I own. I always enjoy reading other people's lists and browsing their bookshelves.</p>
             <p><a href="mailto:mihirptl89@gmail.com"><strong>Drop me a note</strong></a> if you have a book recommendation.</p>
             <br>
             <ol>
@@ -126,6 +126,58 @@
                 <li><a href=""><strong>Thrive: The Third Metric to Redefining Success and Creating a Life of Well-Being, Wisdom, and Wonder</strong></a></li><br>
                 <li><a href=""><strong>How Will You Measure Your Life?</strong></a></li><br>
                 <li><a href=""><strong>Predictable Revenue: Turn Your Business Into a Sales Machine</strong></a></li><br>
+                <li><a href=""><strong>High Output Management</strong></a></li><br>
+                <li><a href=""><strong>Cathedral of the Wild</strong></a></li><br>
+                <li><a href=""><strong>Creativity Inc</strong></a></li><br>
+                <li><a href=""><strong>Geometry of Design by Kim Elam</strong></a></li><br>
+                <li><a href=""><strong>Elements of Design by Gail Hannah</strong></a></li><br>
+                <li><a href=""><strong>Visual Grammar by Christian Leborg</strong></a></li><br>
+                <li><a href=""><strong>Elements of Typographic Style</strong></a></li><br>
+                <li><a href=""><strong>Interaction of Color</strong></a></li><br>
+                <li><a href=""><strong>Factfulness</strong></a></li><br>
+                <li><a href=""><strong>Seeking Wisdom: From Darwin to Munger — Peter Bevelin</strong></a></li><br>
+                <li><a href=""><strong>Superintelligence: Paths, Dangers, Strategies — Nick Bostrom</strong></a></li><br>
+                <li><a href=""><strong>Against the Gods: The Remarkable Story of Risk</strong></a></li><br>
+                <li><a href=""><strong>Enlightenment Now</strong></a></li><br>
+                <li><a href=""><strong>The Story of Philosophy: The Lives and Opinions of the World's Greatest Philosophers</strong></a></li><br>
+                <li><a href=""><strong>The Lessons of History</strong></a></li><br>
+                <li><a href=""><strong>Tools of Titans: The Tactics, Routines, and Habits of Billionaires, Icons, and World-Class Performers</strong></a></li><br>
+                <li><a href=""><strong>A Brief History of Time by Stephen Hawking (1988)</strong></a></li><br>
+                <li><a href=""><strong>Charlie Munger: The Complete Investor (Columbia Business School Publishing)</strong></a></li><br>
+                <li><a href=""><strong>Seven Brief Lessons on Physics</strong></a></li><br>
+                <li><a href=""><strong>The Book of Life: Daily Meditations with Krishnamurti</strong></a></li><br>
+                <li><a href=""><strong>Stories of Your Life and Others</strong></a></li><br>
+                <li><a href=""><strong>Thing Explainer: Complicated Stuff in Simple Words</strong></a></li><br>
+                <li><a href=""><strong>The Three-Body Problem Triology</strong></a></li><br>
+                <li><a href=""><strong>The Little Book of Common Sense Investing</strong></a></li><br>
+                <li><a href=""><strong>Einstein: His Life and Universe</strong></a></li><br>
+                <li><a href=""><strong>Hackers & Painters: Big Ideas from the Computer Age — Paul Graham</strong></a></li><br>
+                <li><a href=""><strong>Endurance: Shackleton’s Incredible Voyage — Alfred Lansing</strong></a></li><br>
+                <li><a href=""><strong>Walt Disney: The Triumph of the American Imagination — Neal Gabler</strong></a></li><br>
+                <li><a href=""><strong>Titan: The Life of John D. Rockefeller, Sr. — Ron Chernow</strong></a></li><br>
+                <li><a href=""><strong>Sam Walton: Made in America — Sam Walton</strong></a></li><br>
+                <li><a href=""><strong>Onward: How Starbucks Fought for Its Life without Losing Its Soul— Howard Schultz</strong></a></li><br>
+                <li><a href=""><strong>Genome: The Autobiography of a Species in 23 Chapters — Matt Ridley</strong></a></li><br>
+                <li><a href=""><strong>When Breath Becomes Air</strong></a></li><br>
+                <li><a href=""><strong>30 Lessons for Living: Tried and True Advice from the Wisest Americans</strong></a></li><br>
+                <li><a href=""><strong>The Wright Brothers by David McCullough</strong></a></li><br>
+                <li><a href=""><strong>Endurance: Shackleton's Incredible Voyage</strong></a></li><br>
+                <li><a href=""><strong>The Great Depression: A Diary by Benjamin Roth</strong></a></li><br>
+                <li><a href=""><strong>The Science of Fear: How the Culture of Fear Manipulates Your Brain</strong></a></li><br>
+                <li><a href=""><strong>Why Moats Matter: The Morningstar Approach to Stock Investing</strong></a></li><br>
+                <li><a href=""><strong>Self-Reliance and Other Essays by Ralph Waldo Emerson</strong></a></li><br>
+                <li><a href=""><strong>The Upanishads, 2nd Edition by Eknath Easwaran</strong></a></li><br>
+                <li><a href=""><strong>The Hero with a Thousand Faces (The Collected Works of Joseph Campbell)</strong></a></li><br>
+                <li><a href=""><strong>Reflections on the Art of Living: A Joseph Campbell Companion</strong></a></li><br>
+                <li><a href=""><strong>Walking by Henry David Thoreau</strong></a></li><br>
+                <li><a href=""><strong>Walden by Henry David Thoreau</strong></a></li><br>
+                <li><a href=""><strong>Antifragile: Things That Gain from Disorder by Nassim Nicholas Taleb</strong></a></li><br>
+                <li><a href=""><strong>As One Is: To Free the Mind from All Conditioning by J Krishnamurti</strong></a></li><br>
+                <li><a href=""><strong>Tao Te Ching: A New English Version (Perennial Classics) by Lao Tzu</strong></a></li><br>
+                <li><a href=""><strong>Ray Bradbury's Fahrenheit 451</strong></a></li><br>
+                <li><a href=""><strong>George Orwell's 1984</strong></a></li><br>
+                <li><a href=""><strong>Brave New World</strong></a></li><br>
+                <li><a href=""><strong>Turn the Ship Around!: A True Story of Turning Followers into Leaders</strong></a></li><br>
             </ol>
         </div>
     </div>
