--- a/pages/bookshelf.html
+++ b/pages/bookshelf.html
@@ -125,7 +125,7 @@
                 <li><a href=""><strong>Homo Deus: A Brief History of Tomorrow </strong></a></li><br>
                 <li><a href=""><strong>Thrive: The Third Metric to Redefining Success and Creating a Life of Well-Being, Wisdom, and Wonder</strong></a></li><br>
                 <li><a href=""><strong>How Will You Measure Your Life?</strong></a></li><br>
-                <li><a href=""><strong>Predictable Revenue: Turn Your Business Into a Sales Machine</strong></a></li><br>
+                <li><a href=""><strong>American Lion: Andrew Jackson in the White House</strong></a></li><br>
                 <li><a href=""><strong>High Output Management</strong></a></li><br>
                 <li><a href=""><strong>Cathedral of the Wild</strong></a></li><br>
                 <li><a href=""><strong>Creativity Inc</strong></a></li><br>
@@ -148,7 +148,6 @@
                 <li><a href=""><strong>The Book of Life: Daily Meditations with Krishnamurti</strong></a></li><br>
                 <li><a href=""><strong>Stories of Your Life and Others</strong></a></li><br>
                 <li><a href=""><strong>Thing Explainer: Complicated Stuff in Simple Words</strong></a></li><br>
-                <li><a href=""><strong>The Three-Body Problem Triology</strong></a></li><br>
                 <li><a href=""><strong>The Little Book of Common Sense Investing</strong></a></li><br>
                 <li><a href=""><strong>Einstein: His Life and Universe</strong></a></li><br>
                 <li><a href=""><strong>Hackers & Painters: Big Ideas from the Computer Age — Paul Graham</strong></a></li><br>
