--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body class="container">
     <div class="header-container">
-        <i class="fa fa-space-shuttle fa-spin fa-3x"></i>
+       <img class ="telescope" src="./assets/telescope.svg" alt="">
         <ul>
         	<li><a href="/">Home</a></li>
             <li><a href="./pages/bookshelf">Bookshelf</a></li>
