--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <br>
     <br>
     <div class="body-container">
-        <h1 class="body-title">The Mihir Chronicles</h1>
+        <h1 class="body-title body-title-home">The Mihir Chronicles</h1>
         <div class="body-content">
             <p>Me here, here!</p>
             <strong>Software Developer</strong> at <strong><a href="http://www.morningstar.com/">Morningstar</a></strong>. I collect mental models. Check out <strong><a href="https://wisecharlie.com/">Wise Charlie</a></strong>. Curious about <strong>finance</strong> & <strong>product engineering</strong> topics. Fond of <strong>art</strong>, <strong>history</strong> & <strong>telescopes</strong>.
