--- a/pages/bookshelf.html
+++ b/pages/bookshelf.html
@@ -27,7 +27,7 @@
     <div class="body-container">
         <h1 class="body-title">The Bookshelf</h1>
         <div class="body-content">
-            <p>Reading is a fun way to experience life and go on an adventure! We all know money compounds, but so does knowledge. I use multi-disciplinary approach to select wide array of books to go on an adventure. This bookshelf represents a complete catalog of books I own. I always enjoy reading other people's lists and browsing their bookshelves.</p>
+            <p>Reading is a fun way to experience life and go on an adventure! We all know money compounds, but so does knowledge. I use multi-disciplinary approach to select wide array of books to go on an adventure. This bookshelf represents a complete catalog of books I own. I always enjoy reading other people's list and browsing their bookshelves.</p>
             <p><a href="mailto:mihirptl89@gmail.com"><strong>Drop me a note</strong></a> if you have a book recommendation.</p>
             <br>
             <ol>
@@ -71,7 +71,7 @@
                 <li><a href=""><strong>King Capital</strong></a></li><br>
                 <li><a href=""><strong>George W Bush</strong></a></li><br>
                 <li><a href=""><strong>African American Religious History</strong></a></li><br>
-                <li><a href=""><strong>How to Win Friends and INfluence People</strong></a></li><br>
+                <li><a href=""><strong>How to Win Friends and Influence People</strong></a></li><br>
                 <li><a href=""><strong>Reminiscences of a Stock Operator</strong></a></li><br>
                 <li><a href=""><strong>Moneyball</strong></a></li><br>
                 <li><a href=""><strong>The Essays of Warren Buffett</strong></a></li><br>
